# django-react-hybrid

./: prod.sh
backend/: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/api/: api_views.py  models.py  serializers.py  urls.py
backend/api/migrations/: 0002_alter_todo_id.py  0003_profile.py  0004_remove_todo_created_by_delete_profile_delete_todo.py
backend/app/: settings.py  urls.py  views.py
backend/backend/: settings.py  urls.py  wsgi.py
backend/backend/settings/: base.py  dev.py
backend/potato_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/profiles/: api_views.py  apps.py  models.py  serializers.py  urls.py
backend/profiles/migrations/: 0001_initial.py
backend/react_container/: apps.py  urls.py  views.py
backend/static/: staticfiles.json
backend/static/js/: 787.dc91bf6b.chunk.692d7be6ff95.js  787.dc91bf6b.chunk.js  787.dc91bf6b.chunk.js.ebdcb75dff64.map  main.48ede5d9.603174661990.js  main.48ede5d9.js  main.48ede5d9.js.1425be100295.map
backend/todos/: api_views.py  models.py  serializers.py  urls.py
backend/todos/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
tssite/: .gitignore  package.json  tsconfig.json
tssite/src/: App.css  App.tsx  config.ts  models.ts
tssite/src/components/: Header.tsx  LoginView.tsx  Sidebar.tsx  SineWave.tsx  ToDoView.tsx  TodoForm.tsx
tssite/src/context/: AuthContext.tsx
tssite/src/pages/: HomePage.tsx  LoginPage.tsx  SignalPage.tsx  ToDoPage.tsx  _ToDoPage.tsx
tssite/src/utils/: PrivateRoute.tsx
