[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["asoderlind <axesode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
waitress = "^2.1.2"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
